[package]
name = "antic-sys"
version = "0.3.4"
edition = "2018"
authors = ["William Youmans <wyoumans@usf.edu>"]
description = "Bindings to the Antic library"
homepage = "https://github.com/wjyoumans/antic-sys"
repository = "https://github.com/wjyoumans/antic-sys"
license = "MIT OR Apache-2.0" 
keywords = ["flint", "number-theory", "math"]
categories = ["algorithms", "external-ffi-bindings", "mathematics"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
gmp-mpfr-sys = "1.4"
flint-sys = { version = "0.7", features = ["disable-make-check"] }

[features]
default = ["disable-make-check"]
disable-make-check = []

[target.'cfg(target_os = "windows")'.build-dependencies.winapi]
version = "0.3"
features = ["combaseapi", "knownfolders", "shlobj", "winbase", "winerror"]
